--- a/src/sass/components/Taskbar.scss
+++ b/src/sass/components/Taskbar.scss
@@ -2,7 +2,41 @@
   position: absolute;
   bottom: 0;
 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
   height: 40px;
   width: 100%;
+  padding-top: 5px;
+  padding-bottom: 5px;
+
   background-color: #C0C0C0;
+
+  &__menu-btn {
+    height: 100%;
+    width: 100px;
+    margin-left: 5px;
+
+    background-color: #C0C0C0;
+    font-size: 20px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  &__time {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 100%;
+    max-height: 100%;
+    width: 100px;
+    margin-right: 5px;
+
+    border: 2px inset;
+    font-size: 20px;
+  }
 }
