--- a/src/styles/components/Taskbar.css
+++ b/src/styles/components/Taskbar.css
@@ -5,5 +5,14 @@
   width: 100%;
   background-color: #C0C0C0;
 }
+.taskbar__menu-btn {
+  height: 100%;
+  width: fit-content;
+  background-color: #C0C0C0;
+  font-size: 20px;
+}
+.taskbar__menu-btn:hover {
+  cursor: pointer;
+}
 
 /*# sourceMappingURL=Taskbar.css.map */
