--- a/src/sass/components/Taskbar.scss
+++ b/src/sass/components/Taskbar.scss
@@ -11,6 +11,7 @@
   padding-top: 5px;
   padding-bottom: 5px;
 
+  border-top: 1px solid white;
   background-color: #C0C0C0;
 
   &__menu-btn {
@@ -38,5 +39,6 @@
 
     border: 2px inset;
     font-size: 20px;
+    background-color: #D9D9D9;
   }
 }
