--- a/src/sass/components/Taskbar.scss
+++ b/src/sass/components/Taskbar.scss
@@ -15,15 +15,33 @@
   background-color: #C0C0C0;
 
   &__menu-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     height: 100%;
-    width: 100px;
+    width: 90px;
     margin-left: 5px;
 
+    border-left: 1px solid white;
+    border-top: 1px solid white;
     background-color: #C0C0C0;
     font-size: 20px;
 
     &:hover {
       cursor: pointer;
+    }
+
+    &--active {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 100%;
+      width: 90px;
+      margin-left: 5px;
+
+      border: 2px inset;
+      background-color: #C0C0C0;
+      font-size: 20px;
     }
   }
 
