Change reset css from Meyers to Normalize. Adjust scss to account for change

--- a/src/sass/components/StartMenu.scss
+++ b/src/sass/components/StartMenu.scss
@@ -23,7 +23,7 @@
     background-color: #817F85;
 
     &__name {
-      transform: translateY(250px) rotate(-90deg);
+      transform: translateY(200px) rotate(-90deg);
 
       color: white;
       font-size: 56px;
@@ -45,7 +45,16 @@
 
       &__shut-down {
         flex-grow: 1;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        border-left: 0;
+        border-right: 0;
+        border-bottom: 0;
         border-top: 2px solid #9E9A9C;
+
+        background-color: #C0C0C0;
       }
     }
   }
