--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -55,6 +55,8 @@
   display: flex;
   height: 400px;
   width: 300px;
+  border-top: 1px solid white;
+  border-left: 1px solid white;
   border-right: 2px solid black;
   border-bottom: 2px solid black;
   background-color: #C0C0C0;
@@ -68,7 +70,7 @@
   background-color: #817F85;
 }
 .start-menu__banner__name {
-  transform: translateY(200px) rotate(-90deg);
+  transform: translateY(270px) rotate(-90deg);
   color: white;
   font-size: 56px;
 }
