--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -81,8 +81,21 @@
   width: 100%;
 }
 .start-menu__app-drawer .app-drawer__programs {
+  display: flex;
+  flex-direction: column;
   height: 85%;
   width: 100%;
+  padding-left: 2rem;
+}
+.start-menu__app-drawer .app-drawer__programs .programs__item {
+  display: flex;
+  align-items: center;
+  height: 40px;
+  margin-bottom: 2rem;
+  font-size: 20px;
+}
+.start-menu__app-drawer .app-drawer__programs .programs__item img {
+  height: 100%;
 }
 .start-menu__app-drawer .app-drawer__shut-down {
   flex-grow: 1;
