Shrink width of the menu banner

--- a/src/sass/components/StartMenu.scss
+++ b/src/sass/components/StartMenu.scss
@@ -21,14 +21,14 @@
 
   &__banner {
     height: 100%;
-    width: 60px;
+    width: 40px;
     background-color: #817F85;
 
     &__name {
-      transform: translateY(270px) rotate(-90deg);
+      transform: translateY(305px) translateX(3px) rotate(-90deg);
 
       color: white;
-      font-size: 56px;
+      font-size: 44px;
     }
   }
 
