--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,5 +1,6 @@
 @use "./components/Taskbar.scss";
 @use "./components/StartMenu.scss";
+@use "./components/DesktopIcons.scss";
 @use "./fonts.scss";
 
 * {
@@ -10,6 +11,10 @@ main {
   background-color: #2E8181;
 }
 
-button, a {
+button {
+  border: 0;
+}
+
+button, a, label {
   cursor: pointer;
 }
