--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -126,6 +126,32 @@
   font-size: 20px;
 }
 
+.desktop-icons {
+  width: 200px;
+  height: 100%;
+  padding-top: 2rem;
+  padding-left: 2rem;
+  color: white;
+}
+.desktop-icons .icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 60px;
+  max-height: 60px;
+  margin-bottom: 3rem;
+  text-align: center;
+}
+.desktop-icons .icon-img {
+  background-color: transparent;
+}
+.desktop-icons .about-me img {
+  width: 60px;
+}
+.desktop-icons .contact img {
+  max-height: 100px;
+}
+
 @font-face {
   font-family: "W95FA";
   src: url("../assets/fonts/W95FA.otf");
@@ -139,7 +165,11 @@ main {
   background-color: #2E8181;
 }
 
-button, a {
+button {
+  border: 0;
+}
+
+button, a, label {
   cursor: pointer;
 }
 
