--- a/src/sass/components/DesktopIcons.scss
+++ b/src/sass/components/DesktopIcons.scss
@@ -1,7 +1,10 @@
 .desktop-icons {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
   width: 200px;
-  height: 100%;
-  padding-top: 2rem;
+  height: 400px;
   padding-left: 2rem;
 
   color: white;
@@ -13,8 +16,11 @@
 
     max-width: 60px;
     max-height: 60px;
-    margin-bottom: 3rem;
     text-align: center;
+
+    button {
+      border: none;
+    }
 
     &-img {
       background-color: transparent;
@@ -28,9 +34,15 @@
     }
   }
 
+  .projects {
+    img {
+      width: 60px;
+    }
+  }
+
   .contact {
     img {
-      max-height: 100px;
+      max-height: 60px;
     }
   }
 }
