--- a/src/sass/components/DesktopIcons.scss
+++ b/src/sass/components/DesktopIcons.scss
@@ -4,7 +4,7 @@
   justify-content: space-around;
 
   width: 200px;
-  height: 400px;
+  height: 300px;
   padding-left: 2rem;
 
   color: white;
@@ -14,8 +14,8 @@
     flex-direction: column;
     align-items: center;
 
-    max-width: 60px;
-    max-height: 60px;
+    max-width: 50px;
+    max-height: 50px;
     text-align: center;
 
     button {
@@ -30,19 +30,21 @@
 
   .about-me {
     img {
-      width: 60px;
+      width: 50px;
     }
+
+    margin-bottom: 1rem;
   }
 
   .projects {
     img {
-      width: 60px;
+      width: 50px;
     }
   }
 
   .contact {
     img {
-      max-height: 60px;
+      max-height: 50px;
     }
   }
 }
