--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -131,7 +131,7 @@
   flex-direction: column;
   justify-content: space-around;
   width: 200px;
-  height: 400px;
+  height: 300px;
   padding-left: 2rem;
   color: white;
 }
@@ -139,8 +139,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 60px;
-  max-height: 60px;
+  max-width: 50px;
+  max-height: 50px;
   text-align: center;
 }
 .desktop-icons .icon button {
@@ -149,14 +149,17 @@
 .desktop-icons .icon-img {
   background-color: transparent;
 }
+.desktop-icons .about-me {
+  margin-bottom: 1rem;
+}
 .desktop-icons .about-me img {
-  width: 60px;
+  width: 50px;
 }
 .desktop-icons .projects img {
-  width: 60px;
+  width: 50px;
 }
 .desktop-icons .contact img {
-  max-height: 60px;
+  max-height: 50px;
 }
 
 @font-face {
