Add react-draggable and Window component

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,6 +1,7 @@
 @use "./components/Taskbar.scss";
 @use "./components/StartMenu.scss";
 @use "./components/DesktopIcons.scss";
+@use "./components/windows/Window.scss";
 @use "./fonts.scss";
 
 * {
