--- a/src/sass/components/windows/Window.scss
+++ b/src/sass/components/windows/Window.scss
@@ -3,7 +3,24 @@
   left: 50%;
   top: 50%;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   height: 400px;
   width: 600px;
-  background-color: red;
+  padding: 4px;
+  background-color: #c2c0c1;
+
+  &__header {
+    height: 30px;
+    width: 100%;
+    background-color: #817F85;
+  }
+
+  &__footer {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+  }
 }
