--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -172,6 +172,10 @@
   height: 400px;
   width: 600px;
   padding: 4px;
+  border-top: white solid 1px;
+  border-left: white solid 1px;
+  border-bottom: black solid 2px;
+  border-right: black solid 2px;
   background-color: #c2c0c1;
 }
 .window__header {
