--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -163,12 +163,6 @@
 }
 
 .window {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   height: 400px;
   width: 600px;
   padding: 4px;
@@ -177,6 +171,12 @@
   border-bottom: black solid 2px;
   border-right: black solid 2px;
   background-color: #c2c0c1;
+}
+.window__main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 .window__header {
   height: 30px;
@@ -187,6 +187,10 @@
   display: flex;
   justify-content: flex-end;
   width: 100%;
+}
+
+.pointer-events-none {
+  pointer-events: none;
 }
 
 @font-face {
