--- a/src/sass/components/windows/Window.scss
+++ b/src/sass/components/windows/Window.scss
@@ -18,8 +18,20 @@
   }
 
   &__header {
+    display: flex;
+    align-items: center;
+
     height: 30px;
     width: 100%;
     background-color: #817F85;
+
+    &__icon {
+      max-height: 95%;
+    }
+    &__title {
+      margin: 0;
+      font-size: 16px;
+      color: white;
+    }
   }
 }
