Add internal structure of the About Me window

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,6 +2,7 @@
 @use "./components/StartMenu.scss";
 @use "./components/DesktopIcons.scss";
 @use "./components/windows/Window.scss";
+@use "./components/windows/AboutMe.scss";
 @use "./fonts.scss";
 
 * {
