--- a/src/sass/components/DesktopIcons.scss
+++ b/src/sass/components/DesktopIcons.scss
@@ -28,7 +28,7 @@
 
   }
 
-  .about-me {
+  .about-me-icon {
     img {
       width: 50px;
     }
@@ -36,13 +36,13 @@
     margin-bottom: 1rem;
   }
 
-  .projects {
+  .projects-icon {
     img {
       width: 50px;
     }
   }
 
-  .contact {
+  .contact-icon {
     img {
       max-height: 50px;
     }
