--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -214,7 +214,7 @@
   height: 100%;
   width: 100%;
   background-color: white;
-  overflow: hidden;
+  overflow: scroll;
 }
 .window__footer {
   height: 20px;
