Set up sizing template for the WindowFrame component

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -3,6 +3,7 @@
 @use "./components/DesktopIcons.scss";
 @use "./components/windows/Window.scss";
 @use "./components/windows/AboutMe.scss";
+@use "./components/windows/Projects.scss";
 @use "./fonts.scss";
 
 * {
