--- a/src/sass/components/windows/Projects.scss
+++ b/src/sass/components/windows/Projects.scss
@@ -18,3 +18,49 @@
     }
   }
 }
+
+.project {
+  &__main {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+  }
+
+  &__hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+
+    &__image {
+      width: 100%;
+      max-width: 600px;
+      min-width: 450px;
+    }
+  }
+
+  &__links {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    &__button {
+      padding: 0.5rem;
+      border-top: 1px solid white;
+      border-right: 1px solid black;
+      border-bottom: 1px solid black;
+      border-left: 1px solid white;
+      background-color: #D9D9D9;
+
+      font-size: 20px;
+
+      &:last-child {
+        margin-left: 1rem;
+      }
+    }
+  }
+
+  &__description {
+    font-size: 20px;
+  }
+}
