Add content to all project windows

--- a/src/sass/components/windows/Projects.scss
+++ b/src/sass/components/windows/Projects.scss
@@ -54,6 +54,11 @@
 
       font-size: 20px;
 
+      &:hover {
+        color: white;
+        background-color: blue;
+      }
+
       &:last-child {
         margin-left: 1rem;
       }
