Add foundation of styles to sorryHal

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -4,6 +4,7 @@
 @use "./components/windows/Window.scss";
 @use "./components/windows/AboutMe.scss";
 @use "./components/windows/Projects.scss";
+@use "./components/windows/SorryHal.scss";
 @use "./fonts.scss";
 
 * {
