--- a/src/sass/components/windows/ContactMe.scss
+++ b/src/sass/components/windows/ContactMe.scss
@@ -4,11 +4,26 @@
   padding: 1rem;
 
   &__form {
-    &__name, &__email, &__message {
+
+    &__name {
       display: flex;
       flex-direction: column;
-
+      max-width: 300px;
       margin-bottom: 0.5rem;
+    }
+
+    &__email {
+      display: flex;
+      flex-direction: column;
+      max-width: 300px;
+      margin-bottom: 0.5rem;
+    }
+
+    &__message {
+      display: flex;
+        flex-direction: column;
+        max-width: 500px;
+        margin-bottom: 0.5rem;
     }
   }
 }
