Create status message for when email is sending and sent successfully

--- a/src/sass/components/windows/ContactMe.scss
+++ b/src/sass/components/windows/ContactMe.scss
@@ -21,9 +21,26 @@
 
     &__message {
       display: flex;
-        flex-direction: column;
-        max-width: 500px;
-        margin-bottom: 0.5rem;
+      flex-direction: column;
+      max-width: 500px;
+      margin-bottom: 0.5rem;
+    }
+
+    &__submit-row {
+      display: flex;
+      justify-content: space-between;
+      max-width: 300px;
+
+      .submit-row__status {
+        &--hidden {
+          display: none;
+        }
+
+        &--active {
+          display: block;
+          font-size: 18px;
+        }
+      }
     }
   }
 }
