Change height of main element to use dvh instead of vh

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -17,8 +17,8 @@
   position: relative;
   overflow: hidden;
 
-  height: 100vh;
-  max-height: 100vh;
+  height: 100dvh;
+  max-height: 100dvh;
 
   background-color: #2E8181;
 }
