--- a/src/sass/components/Taskbar.scss
+++ b/src/sass/components/Taskbar.scss
@@ -42,6 +42,12 @@
     }
   }
 
+  &__open-apps {
+    background-color: red;
+    width: 100%;
+    height: 100%;
+  }
+
   &__time {
     display: flex;
     justify-content: center;
