--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -35,6 +35,11 @@
   background-color: #C0C0C0;
   font-size: 20px;
 }
+.taskbar__open-apps {
+  background-color: red;
+  width: 100%;
+  height: 100%;
+}
 .taskbar__time {
   display: flex;
   justify-content: center;
