--- a/src/sass/components/Taskbar.scss
+++ b/src/sass/components/Taskbar.scss
@@ -43,9 +43,21 @@
   }
 
   &__open-apps {
-    background-color: red;
+    display: flex;
     width: 100%;
     height: 100%;
+    padding-left: 0.25rem;
+
+    &__window {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      width: fit-content;
+      min-width: 100px;
+      height: 100%;
+      border: 1px solid black;
+    }
   }
 
   &__time {
