--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -36,9 +36,19 @@
   font-size: 20px;
 }
 .taskbar__open-apps {
-  background-color: red;
+  display: flex;
   width: 100%;
   height: 100%;
+  padding-left: 0.25rem;
+}
+.taskbar__open-apps__window {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  min-width: 100px;
+  height: 100%;
+  border: 1px solid black;
 }
 .taskbar__time {
   display: flex;
