--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -42,13 +42,15 @@
   padding-left: 0.25rem;
 }
 .taskbar__open-apps__window {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: fit-content;
-  min-width: 100px;
+  display: block;
+  width: 100px;
   height: 100%;
-  border: 1px solid black;
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  border-left: 1px solid white;
+  border-top: 1px solid white;
+  background-color: #C0C0C0;
 }
 .taskbar__time {
   display: flex;
