--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -52,6 +52,16 @@
   border-top: 1px solid white;
   background-color: #C0C0C0;
 }
+.taskbar__open-apps__window--active {
+  display: block;
+  width: 130px;
+  height: 100%;
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  border: 2px inset;
+  background-color: #D9D9D9;
+}
 .taskbar__time {
   display: flex;
   justify-content: center;
