Add warning overlay to redirect mobile users

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,3 +1,4 @@
+@use "./components/MobileRedirectScreen.scss";
 @use "./components/Taskbar.scss";
 @use "./components/StartMenu.scss";
 @use "./components/DesktopIcons.scss";
