--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,28 @@
+.mobile-redirect-screen {
+  position: absolute;
+  z-index: 200;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100dvh;
+  padding: 1rem;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.mobile-redirect-screen__text {
+  font-size: 20px;
+  text-align: center;
+  text-wrap: balance;
+}
+.mobile-redirect-screen__button {
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  color: black;
+  background-color: white;
+  font-size: 16px;
+}
+
 .taskbar {
   position: absolute;
   bottom: 0;
